--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "set-deployment-status",
+  "description": "GitHub Action to set the deployment status",
+  "version": "2.0.0",
+  "scripts": {
+    "prepare": "ncc build index.js -o dist",
+    "all": "npm run prepare"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pilif/set-deployment-status.git"
+  },
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@actions/github": "^2.1.1"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.31.1"
   }
 }
